--- a/tutorial/pom.xml
+++ b/tutorial/pom.xml
@@ -77,6 +77,11 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springmodules</groupId>
+			<artifactId>spring-modules-jakarta-commons</artifactId>
+			<version>0.8a</version>
+		</dependency>
 	</dependencies>
 
 	<build>
