--- a/eduweb/src/main/webapp/WEB-INF/web.xml
+++ b/eduweb/src/main/webapp/WEB-INF/web.xml
@@ -1,60 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <display-name>eduweb</display-name>
-  <listener>
-  <!-- 최상위 컨텍스트 -->
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
+	<display-name>eduweb</display-name>
+	<listener>
+		<!-- 최상위 컨텍스트 -->
+	  	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
   
-  <context-param>
-  <!-- Spring Confuguration File의 위치
-  		src/main/resource에 정의 
+	<context-param>
+		<!-- (주1)
+			Spring Confuguration File의 위치
+			/eduweb/src/main/webapp/WEB-INF/root-context 에 정의 
+		-->
+		<param-name>contextConfigLocation</param-name>
+		<param-value>WEB-INF/root-context/applicationContext.xml</param-value>
+	</context-param>
+  
+  <!-- 
+  	<context-param>
+	    <param-name>defaultHtmlEscape</param-name>
+	    <param-value>true</param-value>
+  	</context-param> 
   -->
-    <param-name>contextConfigLocation</param-name>
-    <param-value>WEB-INF/root-context/applicationContext.xml</param-value>
-  </context-param>
-  
-  <!-- <context-param>
-    <param-name>defaultHtmlEscape</param-name>
-    <param-value>true</param-value>
-  </context-param> -->
-  <listener>
-    <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-  </listener>
-  <servlet>
-    <servlet-name>spring</servlet-name>
-    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-   <!--  <init-param>
-      <param-name>spring.profiles.active</param-name>
-      <param-value>dev</param-value>
-    </init-param> -->
-    <init-param>
-            <param-name>contextConfigLocation</param-name>
-            <param-value>WEB-INF/servlet-context/applicationContext.xml
-         	</param-value>
-        </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>spring</servlet-name>
-    <url-pattern>/</url-pattern>
-  </servlet-mapping>
-  <filter>
-    <filter-name>characterEncodingFilter</filter-name>
-    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-    <init-param>
-      <param-name>encoding</param-name>
-      <param-value>UTF-8</param-value>
-    </init-param>
-    <init-param>
-      <param-name>forceEncoding</param-name>
-      <param-value>true</param-value>
-    </init-param>
-  </filter>
-  <filter-mapping>
-    <filter-name>characterEncodingFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
+	<listener>
+		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+	</listener>
+	<servlet>
+		<servlet-name>spring</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<!--  
+		<init-param>
+			<param-name>spring.profiles.active</param-name>
+			<param-value>dev</param-value>
+		</init-param> 
+		-->
+		<init-param>
+			<!-- (주2)
+				Spring Confuguration File의 위치
+				/eduweb/src/main/webapp/WEB-INF/servlet-context에 정의 
+			-->
+			<param-name>contextConfigLocation</param-name>
+			<param-value>WEB-INF/servlet-context/applicationContext.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>spring</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+	<filter>
+		<filter-name>characterEncodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>characterEncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
   
   <!-- <filter>
     <filter-name>springSecurityFilterChain</filter-name>
